--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.6.0",
-    "@svgr/webpack": "^5.5.0",
+    "@svgr/webpack": "^3.1.0",
     "@types/js-yaml": "^4.0.0",
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
     "js-yaml": "^4.0.0",
-    "next": "10.1.2",
+    "next": "^12.0.4",
     "next-mdx-remote": "^2.1.3",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-instagram-embed": "^2.0.0",
     "react-schemaorg": "^1.3.1",
     "react-twitter-embed": "^3.0.3",
