--- a/config.json
+++ b/config.json
@@ -18,5 +18,6 @@
   ],
   "posts_per_page": 8,
   "github_account": "jwNorwood",
-  "linkedIn_account": "jwnorwood"
+  "linkedIn_account": "jwnorwood",
+  "ga_tracking_id": "UA-58093951-4"
 }
