--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.3",
     "yaml-loader": "^0.6.0"
+  },
+  "resolutions": {
+    "@types/react": "17.0.14",
+    "@types/react-dom": "17.0.14"
   }
 }
