--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@svgr/webpack": "^6.2.1",
     "@types/js-yaml": "^4.0.0",
     "date-fns": "^2.19.0",
+    "eslint-config-next": "^14.2.12",
     "gray-matter": "^4.0.2",
     "js-yaml": "^4.0.0",
-    "next": "^12.0.4",
+    "next": "^14.2.12",
     "next-mdx-remote": "^4.0.2",
     "normalize.css": "^8.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-ga": "^3.3.0",
     "react-icons": "^4.3.1",
     "react-image-lightbox": "^5.1.4",
