--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "schema-dts": "^0.8.2"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.7.2",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
